add blocquote and stylesheet link

--- a/css-history.html
+++ b/css-history.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>CSS Timeline</title>
+<link rel="stylesheet" href="css-history.css">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 <body>
@@ -12,9 +13,11 @@
     </li>
     <li>
       December 1996: CSS was proposed as W3C standard:
+      <blockquote>
       <p>
         "CSS1 defines the language in which style sheets are written and a set of properties that designers can use to describe how documents should be presented. The properties in CSS1 cover the most common screen-based presentations."
       </p>
+      </blockquote>
     </li>
     <!--Remember to indent child tag & only li tags as children in lists-->
     <li>
@@ -46,7 +49,9 @@
           </ul>
         <li>May 1998: CSS2 specification becomes a W3C recommendation.</li>
         <li>2000: Work on CSS3 was under way.</li>
+          <blockquote>
           <div>&quot;CSS3 will, in effect, have all of the features that users expect from a desktop publishing environment, as well as a range of features especially suited to the context of an international and multimedia Web.&quot;</div>
+          </blockquote>
           <p>CSS3 will also be modularized. For example, there might be one module consisting of properties having to do with fonts and text, and another module for properties concerned with colors, and so on.</li>
     </ul>
 </body>
