add CSS style changes

--- a/css-history.html
+++ b/css-history.html
@@ -8,9 +8,11 @@
 <body>
   <h1>Brief History of CSS</h1>
   <ul>
-    <li>
+    <div class="dateyear">
+    <li id="firstlistitem">
       1994: The first work on style sheets started at CERN.
     </li>
+    </div>
     <li>
       December 1996: CSS was proposed as W3C standard:
       <blockquote>
@@ -53,6 +55,7 @@
           <div>&quot;CSS3 will, in effect, have all of the features that users expect from a desktop publishing environment, as well as a range of features especially suited to the context of an international and multimedia Web.&quot;</div>
           </blockquote>
           <p>CSS3 will also be modularized. For example, there might be one module consisting of properties having to do with fonts and text, and another module for properties concerned with colors, and so on.</li>
-    </ul>
+      </ul>
+</ul>
 </body>
 </html>
