--- a/css-history.html
+++ b/css-history.html
@@ -8,22 +8,16 @@
 <body>
   <h1>Brief History of CSS</h1>
   <ul>
-    <div class="dateyear">
-    <li id="firstlistitem">
-      1994: The first work on style sheets started at CERN.
-    </li>
-    </div>
-    <li>
-      December 1996: CSS was proposed as W3C standard:
+    <li id="firstlistitem"><span class="dateyear">1994</span>: The first work on style sheets started at CERN.</li>
+    <li><span class="dateyear">
+      December 1996</span>: CSS was proposed as W3C standard:
       <blockquote>
-      <p>
         "CSS1 defines the language in which style sheets are written and a set of properties that designers can use to describe how documents should be presented. The properties in CSS1 cover the most common screen-based presentations."
-      </p>
       </blockquote>
     </li>
     <!--Remember to indent child tag & only li tags as children in lists-->
-    <li>
-      November 1997: The W3C released the first public CSS2 Working Draft. <strong>New features:</strong>
+    <li><span class="dateyear">
+      November 1997</span>: The W3C released the first public CSS2 Working Draft. <strong>New features:</strong>
       <ul>
         <li>Ability to specify how a document should be spoken when rendering HTML with a speech synthesizer.
           <ul>
@@ -49,11 +43,13 @@
           <ul>
             <li>Font information can be used to download font subsets over the Web.</li>
           </ul>
-        <li>May 1998: CSS2 specification becomes a W3C recommendation.</li>
-        <li>2000: Work on CSS3 was under way.</li>
+        <li><span class="dateyear">May 1998</span>: CSS2 specification becomes a W3C recommendation.</li>
+        <li><span class="dateyear">2000</span>: Work on CSS3 was under way.</li>
+          <section>
           <blockquote>
           <div>&quot;CSS3 will, in effect, have all of the features that users expect from a desktop publishing environment, as well as a range of features especially suited to the context of an international and multimedia Web.&quot;</div>
           </blockquote>
+          </section>
           <p>CSS3 will also be modularized. For example, there might be one module consisting of properties having to do with fonts and text, and another module for properties concerned with colors, and so on.</li>
       </ul>
 </ul>
