--- a/css-history.html
+++ b/css-history.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>CSS Timeline</title>
-<link rel="stylesheet" href="css-history.css">
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-</head>
+  <head>
+  <title>CSS Timeline</title>
+    <link rel="stylesheet" href="css-history.css">
+    <meta charset="UTF-8">
+  </head>
 <body>
   <h1>Brief History of CSS</h1>
   <ul>
     <li id="firstlistitem"><span class="dateyear">1994</span>: The first work on style sheets started at CERN.</li>
     <li><span class="dateyear">
       December 1996</span>: CSS was proposed as W3C standard:
+      <section>
       <blockquote>
         "CSS1 defines the language in which style sheets are written and a set of properties that designers can use to describe how documents should be presented. The properties in CSS1 cover the most common screen-based presentations."
       </blockquote>
+      </section>
     </li>
     <!--Remember to indent child tag & only li tags as children in lists-->
     <li><span class="dateyear">
