--- a/css-history.html
+++ b/css-history.html
@@ -7,19 +7,18 @@
   </head>
 <body>
   <h1>Brief History of CSS</h1>
-  <ul>
-    <li id="firstlistitem"><span class="dateyear">1994</span>: The first work on style sheets started at CERN.</li>
-    <li><span class="dateyear">
-      December 1996</span>: CSS was proposed as W3C standard:
-      <section>
-      <blockquote>
-        "CSS1 defines the language in which style sheets are written and a set of properties that designers can use to describe how documents should be presented. The properties in CSS1 cover the most common screen-based presentations."
-      </blockquote>
-      </section>
-    </li>
+<ul>
+  <li id="firstlistitem"><span class="dateyear">1994</span>: The first work on style sheets started at CERN.</li>
+  <li><span class="dateyear">December 1996</span>: CSS was proposed as W3C standard:
+    <blockquote>
+      "CSS1 defines the language in which style sheets are written and a set of properties that designers can use to describe how documents should be presented. The properties in CSS1 cover the most common screen-based presentations."
+    <Footer>
+      <cite>-Jules Verne</cite>
+    </Footer>
+    </blockquote>
+  </li>
     <!--Remember to indent child tag & only li tags as children in lists-->
-    <li><span class="dateyear">
-      November 1997</span>: The W3C released the first public CSS2 Working Draft. <strong>New features:</strong>
+  <li><span class="dateyear">November 1997</span>: The W3C released the first public CSS2 Working Draft. <strong>New features:</strong>
       <ul>
         <li>Ability to specify how a document should be spoken when rendering HTML with a speech synthesizer.
           <ul>
@@ -42,18 +41,15 @@
             <li>For high-quality printing, crop marks can be printed outside the outer edges of the page box.</li>
           </ul>
         <li>Better specification of fonts for a document.</li>
-          <ul>
+          <ul class ="info">
             <li>Font information can be used to download font subsets over the Web.</li>
           </ul>
+          <ul>
         <li><span class="dateyear">May 1998</span>: CSS2 specification becomes a W3C recommendation.</li>
         <li><span class="dateyear">2000</span>: Work on CSS3 was under way.</li>
-          <section>
-          <blockquote>
-          <div>&quot;CSS3 will, in effect, have all of the features that users expect from a desktop publishing environment, as well as a range of features especially suited to the context of an international and multimedia Web.&quot;</div>
-          </blockquote>
-          </section>
-          <p>CSS3 will also be modularized. For example, there might be one module consisting of properties having to do with fonts and text, and another module for properties concerned with colors, and so on.</li>
-      </ul>
+          <blockquote>&quot;CSS3 will, in effect, have all of the features that users expect from a desktop publishing environment, as well as a range of features especially suited to the context of an international and multimedia Web.&quot;</blockquote>
+          <li>CSS3 will also be modularized. For example, there might be one module consisting of properties having to do with fonts and text, and another module for properties concerned with colors, and so on.</li>
+        </ul>
 </ul>
 </body>
 </html>
